changes in html in resume section added work experience css and added site logo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>Vatsal Thakkar</title>
 
     <!--
     - favicon
   -->
-    <link rel="shortcut icon" href="./images/logo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/logo-1.jpeg" type="image/x-icon" />
 
     <!--
     - custom css link
@@ -596,18 +596,19 @@
                   • Designed a predictive analytics model to analyse the
                   performance of users on tests using different parameters,
                   contributing to a 10% increase in accuracy of personalized
-                  test preparation plans. <br />• Created and visualized charts
-                  and displayed them on front-end using Python and JavaScript to
-                  better understand the data and to provide insights for
-                  informed decision-making. <br />• Contributed to the
-                  development of scalable and maintainable software systems,
-                  utilizing Python and MySQL, and adhered to software
-                  development best practices such as version control, testing,
-                  and debugging. <br />• Created and executed test scripts and
-                  scenarios to validate the functionality of software systems.
+                  test preparation plans. <br /><br />
+                  • Created and visualized charts and displayed them on
+                  front-end using Python and JavaScript to better understand the
+                  data and to provide insights for informed decision-making.<br /><br />
+                  • Contributed to the development of scalable and maintainable
+                  software systems, utilizing Python and MySQL, and adhered to
+                  software development best practices such as version control,
+                  testing, and debugging.<br /><br />
+                  • Created and executed test scripts and scenarios to validate
+                  the functionality of software systems.<br /><br />
                 </p>
               </li>
-
+              <!-- 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Art director</h4>
 
@@ -630,7 +631,7 @@
                   delenit atque corrupti, quos dolores et quas molestias
                   exceptur.
                 </p>
-              </li>
+              </li> -->
             </ol>
           </section>
 
