removed diffusion from blog

--- a/index.html
+++ b/index.html
@@ -197,9 +197,8 @@
 
           <section class="about-text">
             <p>
-              I'm Creative Director and UI/UX Designer from Sydney, Australia,
-              working in web development and print media. I enjoy turning
-              complex problems into simple, beautiful and intuitive designs.
+              I am currently pursuing my master's degree in Computer Science
+              from the University of Georgia.
             </p>
 
             <p>
@@ -1007,7 +1006,7 @@
                 </a>
               </li>
 
-              <li class="blog-post-item">
+              <!-- <li class="blog-post-item">
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
@@ -1036,7 +1035,7 @@
                     </p>
                   </div>
                 </a>
-              </li>
+              </li> -->
 
               <li class="blog-post-item">
                 <a href="#">
@@ -1227,7 +1226,7 @@
         </article>
       </div>
     </main>
-
+    <footer>© Vatsal Thakkar Powered by vCard-personal-portfolio</footer>
     <!--
     - custom js link
   -->
