--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@
           <section class="about-text">
             <p>
               I am currently pursuing my master's degree in Computer Science
-              from the University of Georgia.
+              from the University of Georgia. My interest in mathematics and
+              desire to use its ideas to use computers to solve issues in the
+              real world are what first inspired my passion for computer
+              science.
             </p>
 
             <p>
@@ -300,7 +303,7 @@
           <!--
           - testimonials
         -->
-
+          <!-- 
           <section class="testimonials">
             <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -429,7 +432,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+          </section> -->
 
           <!--
           - testimonials modal
@@ -592,7 +595,7 @@
                 <span>2021 - 2022</span>
 
                 <p class="timeline-text">
-                  • Designed a predictive analytics model to analyse the
+                  • Designed a predictive analytics model to analyze the
                   performance of users on tests using different parameters,
                   contributing to a 10% increase in accuracy of personalized
                   test preparation plans. <br /><br />
@@ -633,7 +636,7 @@
               </li> -->
             </ol>
           </section>
-
+          <!-- 
           <section class="skill">
             <h3 class="h3 skills-title">My skills</h3>
 
@@ -682,7 +685,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+          </section> -->
         </article>
 
         <!--
@@ -971,7 +974,9 @@
           <header>
             <h2 class="h2 article-title">Blog</h2>
           </header>
-
+          <!-- 
+            NeRF : Neural Radiance Field
+           -->
           <section class="blog-posts">
             <ul class="blog-posts-list">
               <li class="blog-post-item">
@@ -1005,7 +1010,9 @@
                   </div>
                 </a>
               </li>
-
+              <!-- 
+                Diffusion
+               -->
               <!-- <li class="blog-post-item">
                 <a href="#">
                   <figure class="blog-banner-box">
@@ -1037,6 +1044,9 @@
                 </a>
               </li> -->
 
+              <!-- 
+                KL Divergence
+               -->
               <li class="blog-post-item">
                 <a href="#">
                   <figure class="blog-banner-box">
@@ -1068,6 +1078,9 @@
                 </a>
               </li>
 
+              <!-- 
+                Transformer
+               -->
               <li class="blog-post-item">
                 <a href="#">
                   <figure class="blog-banner-box">
