--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <!--
           - clients
         -->
-
+<!-- 
           <section class="clients">
             <h3 class="h3 clients-title">Clients</h3>
 
@@ -523,7 +523,7 @@
               </li>
             </ul>
           </section>
-        </article>
+        </article> -->
 
         <!--
         - #RESUME
