--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <!--
           - clients
         -->
-<!-- 
+          <!-- 
           <section class="clients">
             <h3 class="h3 clients-title">Clients</h3>
 
@@ -522,8 +522,8 @@
                 </a>
               </li>
             </ul>
-          </section>
-        </article> -->
+          </section>-->
+        </article>
 
         <!--
         - #RESUME
