--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="info-content">
             <h1 class="name" title="Vatsal Thakkar">Vatsal Thakkar</h1>
 
-            <p class="title">Web developer</p>
+            <p class="title">Graduate student at The University of Georgia</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -149,6 +149,14 @@
                 <ion-icon name="code-slash-outline"></ion-icon>
               </a>
             </li>
+            <li class="social-item">
+              <a
+                href="https://twitter.com/VatsalThakkar33"
+                class="social-link"
+              >
+              <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
           </ul>
         </div>
       </aside>
@@ -225,6 +233,25 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
+                    src="./images/icon-app.svg"
+                    alt="mobile app icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Mobile apps</h4>
+
+                  <p class="service-item-text">
+                    Professional development of applications for iOS and
+                    Android.
+                  </p>
+                </div>
+              </li>
+
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
                     src="./images/icon-design.svg
                 "
                     alt="design icon"
@@ -256,25 +283,6 @@
 
                   <p class="service-item-text">
                     High-quality development of sites at the professional level.
-                  </p>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./images/icon-app.svg"
-                    alt="mobile app icon"
-                    width="40"
-                  />
-                </div>
-
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Mobile apps</h4>
-
-                  <p class="service-item-text">
-                    Professional development of applications for iOS and
-                    Android.
                   </p>
                 </div>
               </li>
@@ -591,7 +599,7 @@
 
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Junior Software Engineer</h4>
+                <h4 class="h4 timeline-item-title">Junior Software Engineer | <i>ECPL EdTech</i> </h4>
                 <span>2021 - 2022</span>
 
                 <p class="timeline-text">
@@ -636,22 +644,148 @@
               </li> -->
             </ol>
           </section>
-          <!-- 
           <section class="skill">
-            <h3 class="h3 skills-title">My skills</h3>
+            <h3 class="h3 skills-title">Skills</h3>
 
             <ul class="skills-list content-card">
               <li class="skills-item">
                 <div class="title-wrapper">
-                  <h5 class="h5">Web design</h5>
-                  <data value="80">80%</data>
+                  <h5 class="h5">Programming Languages</h5>
                 </div>
-
-                <div class="skill-progress-bg">
+                <div class="skill-image">
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Python-000000?style=flat&logo=python" alt="Python">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-JavaScript-000000?style=flat&logo=javascript" alt="JavaScript">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Java-000000?style=flat&logo=Java&logoColor=007396" alt="Java">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-C-000000?style=flat&logo=C" alt="C">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-C++-000000?style=flat&logo=C%2B%2B&logoColor=00599C" alt="C++">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-HTML5-000000?style=flat&logo=HTML5" alt="HTML5">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-CSS-000000?style=flat&logo=css3&logoColor=blue" alt="CSS3">
+                  </div>
+                </div>
+                <!-- <div class="skill-progress-bg">
                   <div class="skill-progress-fill" style="width: 80%"></div>
+                </div> -->
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Python Libraries</h5>
+                </div>
+                <div class="skill-image">
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-PyTorch-000000?style=flat&logo=pytorch&logoColor=F05032">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Numpy-000000?style=flat&logo=numpy&logoColor=blue">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Pandas-000000?style=flat&logo=pandas&logoColor=yellow">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/🧨-Diffusers-000000?style=flat">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/🤗-Transformers-000000?style=flat">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Tensorflow-000000?style=flat&logo=tensorflow">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Keras-000000?style=flat&logo=keras&logoColor=red">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Scikit-000000?style=flat&logo=scikitlearn&logoColor=orange">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-scipy-000000?style=flat&logo=scipy&logoColor=blue">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Matplotlib-000000?style=flat&logo=matplotlib&logoColor=F05032">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-OpenCV-000000?style=flat&logo=opencv&logoColor=green">
+                  </div>
                 </div>
               </li>
-
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Database</h5>
+                </div>
+                <div class="skill-image">
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-MySQL-000000?style=flat&logo=MySQL">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-MongoDB-000000?style=flat&logo=mongodb">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Oracle-000000?style=flat&logo=oracle&logoColor=F05032">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-PostgreSQL-000000?style=flat&logo=postgresql">
+                  </div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Backend</h5>
+                </div>
+                <div class="skill-image">
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Django-000000?style=flat&logo=django">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Node.js-000000?style=flat&logo=node.js&logoColor=339933">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-express.js-000000?style=flat&logo=express&logoColor=skyblue">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-NPM-000000?style=flat&logo=npm&logoColor=ffffff">
+                  </div>
+                </div>
+              </li>
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Other Tools and Technologies</h5>
+                </div>
+                <div class="skill-image">
+                  <div class="skill-image-shield">
+                    <img src=https://img.shields.io/badge/-Git-000000?style=flat&logo=git&logoColor=F05032">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-GitHub-000000?style=flat&logo=github&logoColor=FFFFFF">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-React-000000?style=flat&logo=React&logoColor=61DAFB">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-Spring-000000?style=flat&logo=spring&logoColor=6DB33F">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-MacOS-000000?style=flat&logo=apple&logoColor=ffffff">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-LinuxOS-000000?style=flat&logo=linux&logoColor=FCC624">
+                  </div>
+                  <div class="skill-image-shield">
+                    <img src="https://img.shields.io/badge/-WindowsOS-000000?style=flat&logo=windows&logoColor=blue">
+                  </div>
+                </div>
+              </li>
+<!--
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Graphic design</h5>
