--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
               science.
             </p>
 
-            <p>
+            <!-- <p>
               My job is to build your website so that it is functional and
               user-friendly but at the same time attractive. Moreover, I add
               personal touch to your product and make sure that is eye-catching
               and easy to use. My aim is to bring across your message and
               identity in the most creative way. I created web design for many
               famous brand companies.
-            </p>
+            </p> -->
           </section>
 
           <!--
@@ -233,18 +233,51 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-app.svg"
-                    alt="mobile app icon"
+                    src="./images/deep-learning.png"
+                    alt="deep learning icon"
                     width="40"
                   />
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Mobile apps</h4>
+                  <h4 class="h4 service-item-title">Deep Learning</h4>
 
                   <p class="service-item-text">
-                    Professional development of applications for iOS and
-                    Android.
+                    Designing, implementing, and training neural networks using frameworks like TensorFlow, PyTorch, or Keras for the tasks such as image classification, object detection, natural language processing, speech recognition, or recommender systems.
+                  </p>
+                </div>
+              </li>
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./images/data-science.png"
+                    alt="data-science icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Data Science</h4>
+
+                  <p class="service-item-text">
+                    Using statistical techniques and modeling methods to gain deeper insights from data.
+                  </p>
+                </div>
+              </li>
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./images/vision.png"
+                    alt="Computer Vision Icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Computer Vision</h4>
+
+                  <p class="service-item-text">
+                    Conducting experiments with different computer vision techniques, testing their performance, and fine-tuning parameters to improve the accuracy of your models.
                   </p>
                 </div>
               </li>
@@ -252,23 +285,20 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-design.svg
-                "
-                    alt="design icon"
+                    src="./images/natural-language-processing.png"
+                    alt="NLP icon"
                     width="40"
                   />
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web design</h4>
+                  <h4 class="h4 service-item-title">Natural Language Processing</h4>
 
                   <p class="service-item-text">
-                    The most modern and high-quality design made at a
-                    professional level.
+                    Training models for text generation tasks, such as language modeling or text summarization.
                   </p>
                 </div>
               </li>
-
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
@@ -283,25 +313,6 @@
 
                   <p class="service-item-text">
                     High-quality development of sites at the professional level.
-                  </p>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./images/icon-photo.svg"
-                    alt="camera icon"
-                    width="40"
-                  />
-                </div>
-
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Photography</h4>
-
-                  <p class="service-item-text">
-                    I make high-quality photos of any category at a professional
-                    level.
                   </p>
                 </div>
               </li>
