--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="info-content">
             <h1 class="name" title="Vatsal Thakkar">Vatsal Thakkar</h1>
 
-            <p class="title">Graduate student at The University of Georgia</p>
+            <p class="title">The University of Georgia</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
