--- a/index.html
+++ b/index.html
@@ -897,20 +897,20 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a href="https://easemybank.netlify.app/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./images/project-1.jpg"
+                      src="./images/EaseMyBank.png"
                       alt="finance"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Finance</h3>
+                  <h3 class="project-title">Ease My Bank</h3>
 
                   <p class="project-category">Web development</p>
                 </a>
@@ -921,20 +921,20 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a href="https://activitytrack.netlify.app/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./images/project-2.png"
+                      src="./images/ActivityTrack2.png"
                       alt="orizon"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Orizon</h3>
+                  <h3 class="project-title">Activity Track</h3>
 
                   <p class="project-category">Web development</p>
                 </a>
@@ -945,20 +945,20 @@
                 data-filter-item
                 data-category="web design"
               >
-                <a href="#">
+                <a href="https://thedicegamebyvt.netlify.app/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./images/project-3.jpg"
+                      src="./images/DiceGame.png"
                       alt="fundo"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Fundo</h3>
+                  <h3 class="project-title">The Dice Game</h3>
 
                   <p class="project-category">Web design</p>
                 </a>
