changes in the about section

--- a/index.html
+++ b/index.html
@@ -212,14 +212,12 @@
               science.
             </p>
 
-            <!-- <p>
-              My job is to build your website so that it is functional and
-              user-friendly but at the same time attractive. Moreover, I add
-              personal touch to your product and make sure that is eye-catching
-              and easy to use. My aim is to bring across your message and
-              identity in the most creative way. I created web design for many
-              famous brand companies.
-            </p> -->
+            
+            <p>I am passionate about the fascinating world of generative deep learning models, where cutting-edge techniques such as stable diffusion models, GANs, and transformers converge to push the boundaries of creativity and artificial intelligence.</p>
+
+            <p>  
+              As a generative deep learning specialist, I have honed my expertise in exploring the frontiers of AI-driven creativity. My journey has led me to dive deep into stable diffusion models, witnessing the magic of diffusion processes and their role in generating high-quality and diverse outputs. With a keen eye for detail and a drive for excellence, I strive to leverage stable diffusion models to create stunning visual content that captivates and inspires.
+            </p>
           </section>
 
           <!--
@@ -250,23 +248,6 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/data-science.png"
-                    alt="data-science icon"
-                    width="40"
-                  />
-                </div>
-
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Data Science</h4>
-
-                  <p class="service-item-text">
-                    Using statistical techniques and modeling methods to gain deeper insights from data.
-                  </p>
-                </div>
-              </li>
-              <li class="service-item">
-                <div class="service-icon-box">
-                  <img
                     src="./images/vision.png"
                     alt="Computer Vision Icon"
                     width="40"
@@ -281,6 +262,24 @@
                   </p>
                 </div>
               </li>
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./images/data-science.png"
+                    alt="data-science icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Data Science</h4>
+
+                  <p class="service-item-text">
+                    Using statistical techniques and modeling methods to gain deeper insights from data.
+                  </p>
+                </div>
+              </li>
+              
 
               <li class="service-item">
                 <div class="service-icon-box">
@@ -313,6 +312,23 @@
 
                   <p class="service-item-text">
                     High-quality development of sites at the professional level.
+                  </p>
+                </div>
+              </li>
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./images/icon-design.svg"
+                    alt="Web design icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Web Design</h4>
+
+                  <p class="service-item-text">
+                    The most modern and high-quality design made at a professional level.
                   </p>
                 </div>
               </li>
@@ -572,7 +588,7 @@
                 <span>2022 — 2024</span>
 
                 <p class="timeline-text">
-                  Grade (GPA): 3.76 out of 4.0 <br />
+                  Grade (GPA): 3.85 out of 4.0 <br />
                   Relevant Courses: Advance Special Topics in Computer Vision
                   and Deep Learning, Algorithm, Data Science II, Database
                   Management, Computer System Architecture.
