Changes in projects section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
 
     <main>
-      <!--
+    <!--
       - #SIDEBAR
     -->
 
@@ -865,7 +865,7 @@
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>Web design</button>
+                <button data-filter-btn>Deep Learning</button>
               </li>
 
               <li class="filter-item">
@@ -894,7 +894,7 @@
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Web design</button>
+                  <button data-select-item>Deep Leaning</button>
                 </li>
 
                 <li class="select-item">
@@ -976,7 +976,7 @@
 
                   <h3 class="project-title">The Dice Game</h3>
 
-                  <p class="project-category">Web design</p>
+                  <p class="project-category">Web development</p>
                 </a>
               </li>
 
@@ -985,26 +985,26 @@
                 data-filter-item
                 data-category="applications"
               >
-                <a href="#">
+                <a href="https://github.com/vatsalthakkar3/PKL-Sports-Data-Analysis">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
 
                     <img
-                      src="./images/project-4.png"
-                      alt="brawlhalla"
+                      src="https://socialify.git.ci/vatsalthakkar3/PKL-Sports-Data-Analysis/image?logo=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2F2%2F2b%2F919-9198627_the-league-will-continue-its-existing-format-and.png&name=1&owner=1&pattern=Overlapping%20Hexagons&theme=Light"
+                      alt="PKL"
                       loading="lazy"
                     />
                   </figure>
 
-                  <h3 class="project-title">Brawlhalla</h3>
+                  <h3 class="project-title">PKL-Sports Data Analysis</h3>
 
                   <p class="project-category">Applications</p>
                 </a>
               </li>
 
-              <li
+              <!-- <li
                 class="project-item active"
                 data-filter-item
                 data-category="web design"
@@ -1122,7 +1122,7 @@
 
                   <p class="project-category">Web development</p>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </section>
         </article>
