--- a/index.html
+++ b/index.html
@@ -630,19 +630,10 @@
                 <span>2021 - 2022</span>
 
                 <p class="timeline-text">
-                  • Designed a predictive analytics model to analyze the
-                  performance of users on tests using different parameters,
-                  contributing to a 10% increase in accuracy of personalized
-                  test preparation plans. <br /><br />
-                  • Created and visualized charts and displayed them on
-                  front-end using Python and JavaScript to better understand the
-                  data and to provide insights for informed decision-making.<br /><br />
-                  • Contributed to the development of scalable and maintainable
-                  software systems, utilizing Python and MySQL, and adhered to
-                  software development best practices such as version control,
-                  testing, and debugging.<br /><br />
-                  • Created and executed test scripts and scenarios to validate
-                  the functionality of software systems.<br /><br />
+                  → Developed a predictive analytics model, specifically tailored to analyze user performance on tests by incorporating diverse parameters, which led to a substantial 10% enhancement in the precision of personalized test preparation plans. <br>
+                  → Created intuitive and actionable dashboards by leveraging data visualization techniques and implementing REST APIs, enabling users to gain valuable insights for informed decision-making, resulting in a significant 25% reduction in data analysis time.<br>
+                  → Collaborated with cross-functional teams to design scalable software systems, utilizing Machine Learning Algorithms, Flask Web Framework, MySQL, and adhered to best software development practices such as version control and Agile development methodologies.<br>
+                  → Developed comprehensive test scripts and scenarios to thoroughly validate the functionality and performance of software system.
                 </p>
               </li>
               <!-- 
